--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/Articles.cshtml
@@ -12,34 +12,56 @@
 
 <h2>Articles</h2>
 
+<div class="alert alert-dismissible alert-primary" style="display:none;">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting again.
+</div>
+<!--Search-->
+@using (Html.BeginForm("Articles", "Article", FormMethod.Get, new { id = "searchForm" }))
+{
+    <b> Search By: </b>
+    @Html.RadioButton("option", "Name", new { id = "nameRad", @required = "required" })<text>Name</text>
+    @Html.RadioButton("option", "Tags", new { id = "tagRad" })<text> Tags </text>
+    <br />
+    <input name="search" id="searchBar" type="text" data-role="none" required" />
+    <input type="button" onclick="this.form.submit();" value="Search" id="searchBtn" class="btn btn-default" />
+
+}
 
 @foreach (var item in Model)
 {
-<div class="card" style="width: 70rem;">
-    <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">
-        @*Edit this to link to view a single article page*@
-
-
-        <div class="card-header">
-            @*Implement retrieveUserPic or borrow from ray again*@
-            <img src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
-            <div style="height:5rem; padding-top:30px; padding-left:100px;">
-                <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
-                <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
-            </div>
-        </div>
-        <div class="card-body">
-            <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
-            <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
-        </div>
-        <div class="card-footer">
-
+    <div class="card" style="width: 70rem;">
+        <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">
             @*Edit this to link to view a single article page*@
-            <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">Read More</a>
-            <a href="#" class="card-link">Share</a>
-        </div>
-    </a>
-</div>
+
+
+            @*<div class="card-header">
+                    <img src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image" />
+                    <div style="height:5rem; padding-top:30px; padding-left:100px;">
+                        <h6 class="card-subtitle mb-2 text-muted">Posted on : @Html.DisplayFor(modelItem => item.postDate)</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">By : @Html.DisplayFor(modelItem => item.userName)</h6>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h3 class="card-title">@Html.DisplayFor(modelItem => item.title)</h3>
+                    <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                </div>
+                <div class="card-footer">
+
+                    <a href="@Url.Action("ViewArticle", "Article", new { id = item.articleID})" style="text-decoration: none;">Read More</a>
+                    <a href="#" class="card-link">Share</a>
+                </div>*@
+
+            <div class="card" style="width: 18rem;">
+             <img class="card-img-top" src="@Url.Action("retrieveUserPic", "Article", new { username = item.userName })" style="width:5rem; height:5rem; float:left;" alt="Image"/>
+             <div class="card-body">
+                 <h5 class="card-title">@Html.DisplayFor(modelItem => item.title)</h5>
+                 <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                 @*<a href="#" class="btn btn-primary">Go somewhere</a>*@
+             </div>
+            </div>
+        </a>
+    </div>
 
 
     <br />
