--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -4,17 +4,44 @@
 }
 
 <div class="jumbotron">
-    <h2>Quit smoking today <br/> Prevention is better than cure</h2>
-    <p> </p>
-
-    <div class="slideshow-container">
 
 
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="~/images/smoke-free1.png" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/images/smoke-free2.png" alt="">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="~/images/smoke-free2.png" alt="">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
     </div>
     
+
+
 </div>
 
 <div class="row">
+    <h2>Quit smoking today <br /> Prevention is better than cure</h2>
+</div>
+<div class="row">
+    
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>Wonder how you can begin your journey to being smoke free? Start here today!</p>
