--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Smoke Free</p>
         </footer>
     </div>
     @Scripts.Render("~/bundles/jquery")
