--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -22,25 +22,24 @@
     </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" id="submitBtn" onclick="test()"/>
+                <input  type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" id="submitBtn" onclick="test()"/>
                 @*<a href="@Url.Action("ViewStory/"+Model.parentID.ToString(), "Story")" style="text-decoration: none;">BACK</a>*@
             </div>
         </div>
     </div>
 
-    <script src="~/Scripts/jquery-3.4.1.min.js">
-        //$(document).ready(function () {
-        //    $('#submitBtn').submit(function () {
-        //        alert("refreshing");
-        //        location.reload();
-        //        console.log();
-        //    });
-        //});
-
-        function test() {
-            window.history.go(-1);
-            //alert("create comment")
-        }
-
-    </script>
 }
+<script>
+    //$(document).ready(function () {
+    //    $('#submitBtn').submit(function () {
+    //        alert("refreshing");
+    //        location.reload();
+    //        console.log();
+    //    });
+    //});
+
+    function test() {
+        alert("create comment")
+    }
+
+</script>
