--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
@@ -1,7 +1,10 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<h2>About us</h2>
+
+<h4>What do we do?</h4>
+<p></p>
+
+
