--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
 </div>
 
 <div class="row">
-    <h2>Quit smoking today <br /> Prevention is better than cure</h2>
+    <h2>Quit smoking today <br /> Prevention is better than cure<br /></h2>
 </div>
 <div class="row">
     
@@ -50,7 +50,7 @@
     <div class="col-md-4">
         <h2>Articles</h2>
         <p>Read some of our articles written by professionals about what smoking can do to your health</p>
-        <p class="btn btn-default">@Html.ActionLink("Articles", "Articles", "Article")</p>
+        <p class="btn btn-default">@Html.ActionLink("Login", "SignInMember", "Account")</p>
     </div>
     <div class="col-md-4">
         <h2>About us</h2>
