--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/CreateComment.cshtml
@@ -9,37 +9,19 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Comments</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.body, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
-        </div>
-    </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input  type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" id="submitBtn" onclick="test()"/>
+        <div class="d-flex">
+            @*@Html.LabelFor(model => model.body, htmlAttributes: new { @class = "control-label col-md-2" })*@
+            <div class="p-1">
+                @Html.EditorFor(model => model.body, new { htmlAttributes = new { @class = "form-control", @placeholder = "What's on your mind?" } })
+                @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+            </div>
+            <div class="p-1">
+                <input type="button" onclick="this.form.submit();" value="Post" class="btn btn-default" />
                 @*<a href="@Url.Action("ViewStory/"+Model.parentID.ToString(), "Story")" style="text-decoration: none;">BACK</a>*@
             </div>
         </div>
     </div>
 
 }
-<script>
-    //$(document).ready(function () {
-    //    $('#submitBtn').submit(function () {
-    //        alert("refreshing");
-    //        location.reload();
-    //        console.log();
-    //    });
-    //});
-
-    function test() {
-        alert("create comment")
-    }
-
-</script>
