--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/ViewComment.cshtml
@@ -24,20 +24,25 @@
         <ul>
             @foreach (var item in Model)
             {
+                <br />
                 <li class="list-inline">
                     <div class="card">
-                        <div class="card-body" style="padding-left:37px">
-                            <h4 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h4>
-                            <h6 class="card-subtitle mb-2 text-muted">@Html.DisplayFor(modelItem => item.postDate)</h6>
-                            <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
-
-                            @*<button type="button" class="btn btn-default" onclick="showHide(@item.commentID.ToString())">Reply</button>*@
-                            @*id="@item.commentID.ToString()" style="display:none">*@
-
-                                  @Html.Action("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(item.commentID, "C"))
- 
-
+                        <div class="card-header">
+                            <div class="d-flex">
+                                <div class="mr-auto p-2">
+                                    <h5 class="card-title">@Html.DisplayFor(modelItem => item.userName)</h5>
+                                </div>
+                                <div class="p-2">
+                                    <p class="text-muted">@Html.DisplayFor(modelItem => item.postDate)</p>
+                                </div>
+                            </div>
                         </div>
+                        <div class="card-body" style="padding-left:37px">
+                            <p class="card-text">@Html.DisplayFor(modelItem => item.body)</p>
+                            <hr />
+                            @Html.Action("CreateComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(item.commentID, "C"))
+                        </div>
+
                     </div>
 
                     @Html.Action("ViewComment", "Comments", new SmokeFreeApplication.Controllers.CommentQuery(item.commentID, "C"))
@@ -46,15 +51,3 @@
         </ul>
     </div>
 }
-<script>
-    //function showHide(divID) {
-    //    var x = document.getElementById(divID);
-    //    if (x.style.display === "none") {
-    //        x.style.display = "block";
-    //    } else {
-    //        x.style.display = "none";
-    //    }
-    //    x.style.display = "block";
-    //}
-
-</script>
