"Delete" action for CommentsController
should be functional
also implemented the redirect more generally to handle redirect to articles as well, once articles are done

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/Index.cshtml
@@ -31,28 +31,31 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.parentType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.parentID)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.body)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.postDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.userName)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.commentID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.commentID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.commentID })
-        </td>
-    </tr>
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.parentType)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.parentID)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.body)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.postDate)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.userName)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.status)
+    </td>
+    <td>
+        @Html.ActionLink("Edit", "Edit", new { id = item.commentID }) |
+        @Html.ActionLink("Details", "Details", new { id = item.commentID }) |
+        @Html.ActionLink("Delete", "Delete", new { id = item.commentID })
+    </td>
+</tr>
 }
 
 </table>
