--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/Delete.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Comments/Delete.cshtml
@@ -1,65 +1,47 @@
 ﻿@model SmokeFreeApplication.Models.Comment
 
 @{
-    ViewBag.Title = "Delete";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = null;
+    string cmtToDivModal = "modal_cmt" + Model.commentID.ToString();
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Comment</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.parentType)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.parentType)
-        </dd>
+<div class="modal fade" id="@cmtToDivModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Delete this comment?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div>
+                    <div class="d-flex">
+                        <div class="mr-auto">
+                            <h6>@Html.DisplayFor(model => model.userName)</h6>
+                        </div>
+                        <div>
+                            <p class="text-muted">@Html.DisplayFor(model => model.postDate)</p>
+                        </div>
+                    </div>
+                    <div>
+                        @Html.DisplayFor(model => model.body)
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                @using (Html.BeginForm("Delete", "Comments", new { id = Model.commentID }, FormMethod.Post, null))
+                {
+                    @Html.AntiForgeryToken()
 
-        <dt>
-            @Html.DisplayNameFor(model => model.parentID)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.parentID)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.body)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.body)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.postDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.postDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.userName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.userName)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    <div class="form-actions no-color">
+                        <input type="submit" onclick="this.form.submit();" value="Delete" class="btn btn-primary" />
+                    </div>
+                }
+            </div>
         </div>
-    }
+    </div>
 </div>
