Combined sign in
Previously sign in was separated to doctor & interested party, now it is combined. Admin sign in is still under a separate link.

--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpSuccessDoctor.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpSuccessDoctor.cshtml
@@ -9,6 +9,6 @@
     <h3 style="padding-top: 15px;">Successful Sign up</h3>
     <p> Note: Doctor account approval may take up to 2 working days. </p>
 
-    @Html.ActionLink("Click here to sign in", "SignInDoctor", "Account")
+    @Html.ActionLink("Click here to sign in", "SignIn", "Account")
 </div>
 
