--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpSuccessMember.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Account/SignUpSuccessMember.cshtml
@@ -9,6 +9,6 @@
     <h3 style="padding-top: 15px;">Successful Sign up</h3>
 
 
-    @Html.ActionLink("Click here to sign in", "SignInMember", "Account")
+    @Html.ActionLink("Click here to sign in", "SignIn", "Account")
 </div>
 
