--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/Index.cshtml
@@ -38,19 +38,16 @@
 </div>
 
 <div class="row">
-    <h2>Quit smoking today <br /> Prevention is better than cure<br /></h2>
-</div>
-<div class="row">
     
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>Wonder how you can begin your journey to being smoke free? Start here today!</p>
-        <p class="btn btn-default">@Html.ActionLink("Sign Up", "SignUpMember", "Account")</p>
+        <p class="btn btn-default">@Html.ActionLink("Sign Up", "SignUp", "Account")</p>
     </div>
     <div class="col-md-4">
         <h2>Articles</h2>
         <p>Read some of our articles written by professionals about what smoking can do to your health</p>
-        <p class="btn btn-default">@Html.ActionLink("Login", "SignInMember", "Account")</p>
+        <p class="btn btn-default">@Html.ActionLink("Login", "SignIn", "Account")</p>
     </div>
     <div class="col-md-4">
         <h2>About us</h2>
