--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Shared/_NotSignedIn.cshtml
@@ -14,7 +14,7 @@
                 @Html.ActionLink("About Us", "About", "Home")
             </li>
             <li class="nav-item nav-link">
-                @Html.ActionLink("Sign In", "SignInMember", "Account")
+                @Html.ActionLink("Sign In", "SignIn", "Account")
             </li>
 
 
