--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Article/createArticle.cshtml
@@ -9,39 +9,49 @@
 
 <h1>Create an Article</h1>
 
-<img src="@Url.Action("retrieveUserPic", "Doctor", new { username = ViewBag.username})" style="width:8rem; height:9rem; float:left; margin-right:10px;" alt="Image" />
 
-<br>
-<div>
-    <h3>@ViewBag.docName</h3>
-    <p class="title">Doctor at @ViewBag.workLocation</p>
-</div>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
 
-<form>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <form onsubmit="return false;">
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        <p>Article Title: </p>
-        <div class="col-sm-12">
-            @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control" }, style = "width:300px;" })
-            @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <p>Title: </p>
+            <div>
+                @Html.TextBoxFor(model => model.title, new { htmlAttributes = new { @class = "form-control create-article-field" } })
+                @Html.ValidationMessageFor(model => model.title, "", new { @class = "text-danger" })
+            </div>
         </div>
-    </div>
 
-    <div class="form-group">
-        <p>Description: </p>
-        <div class="col-sm-12">
-            @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control" }, style = "width:100%; height:200px;" })
-            @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+        <div class="form-group">
+            <p>Description: </p>
+            <div>
+                @Html.TextAreaFor(model => model.body, new { htmlAttributes = new { @class = "form-control create-article-field" } })
+                @Html.ValidationMessageFor(model => model.body, "", new { @class = "text-danger" })
+                <input type="file" class="form-control-file" name="ImageFile" id="ImageFile" />
+            </div>
         </div>
-    </div>
 
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-default" style="background-color: #e7e7e7; color: black;" } />
+        <div class="form-group">
+            <p>Tags: </p>
+            <div>
+                <input name="tagsinput" type="text" data-role="tagsinput" class="create-article-field" />
+            </div>
         </div>
-    </div>
-</form>
-
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="button" onclick="this.form.submit();" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </form>
+}
+@section Scripts
+{
+    <link href="~/Content/article-style.css" rel="stylesheet">
+    <link href="~/Summernote/summernote-bs4.css" rel="stylesheet">
+    <script type="text/javascript" src="~/Summernote/summernote-bs4.js"></script>
+    <script type="text/javascript" src="~/Scripts/text-editor.js"></script>
+}
