--- a/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
+++ b/Application/SmokeFreeApplication/SmokeFreeApplication/Views/Home/About.cshtml
@@ -3,8 +3,25 @@
 }
 
 <h2>About us</h2>
+<br />
+<h4>MISSION</h4>
+<p>
+    We're an organisation promoting a healthier community by providing you a platform
+    with resources to aid smokers in their efforts to quit smoking. There will be
+    articles posted by certified doctors about smoking and its risks. Smokers are able
+    comment on these articles and interact with one another. Similarly, smokers will
+    also be able to share their own recovery stories.
+</p>
 
-<h4>What do we do?</h4>
-<p></p>
+<p>
+    We also provide interesting features such as track quit smoking progress that gives smokers
+    a view on how far they have come in quitting smoking and how much money they have
+    save up till today.
+</p>
+<p>
+    Start your quit smoking journey today by joining us!
+    <br />
+    We will not disappoint you with the articles and stories shared by smokers and professionals.
+</p>
 
 
